@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-20T16:19:20Z",
-  "count_outdated" : 470,
-  "uniques_outdated" : 268,
-  "count" : 490,
-  "uniques" : 285,
+  "timestamp" : "2022-08-21T01:25:46Z",
+  "count_outdated" : 474,
+  "uniques_outdated" : 270,
+  "count" : 494,
+  "uniques" : 286,
   "clones" : [
-    {
-      "timestamp": "2022-08-06T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-08-07T00:00:00Z",
       "count": 2,
@@ -56,10 +49,10 @@
     },
     {
       "timestamp": "2022-08-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
