@@ -3,11 +3,6 @@
   "uniques": 13,
   "clones": [
     {
-      "timestamp": "2022-08-06T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
       "timestamp": "2022-08-07T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -39,8 +34,8 @@
     },
     {
       "timestamp": "2022-08-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
